--- a/index.html
+++ b/index.html
@@ -4,36 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Arghya Sharma</h1>
+    <h1><em>RESUME</em></h1>
     <hr />
-    <img src="./assets/images/My photo.jpeg" alt="Creator's Photo" width="150" />
+    <div class="personal-container">
+    <img src="./assets/images/my photo.png" alt="Applier's Photograph">
+        <div class="personal-information">
+            Name: Arghya Sharma
+        </div>
+    </div>
 
-    <h2>Summary:</h2>
-    <ol>
-    <li>
-        <h3>Objective:</h3>
-        <p>I aim to become a software engineer in a reputed organisation and also an entrepreneur.</p>
-    </li>
-    <li>
-        <h3>Education:</h3>
-        <p>B.Tech in Computer Science and Engineering from National Institute of Technology, Hamirpur (2024-2028)</p>
-    </li>
-    <li>
-        <h3>Skills:</h3>
-        <p>Programming Languages: C, C++, Python, JavaScript</p>
-        <p>Web Development: HTML, CSS, React.js, Node.js</p>
-    </li>
-    <li>
-        <h3>Projects:</h3>
-        <p>1. Personal Portfolio Website: A responsive website showcasing my projects and skills.</p>
-        <p>2. Additional projects completed during coursework using C, C++, and Python.</p>
-        <p>3. One of the projects was implementing BFS and DFS to solve a maze using Python</p>
-    </li>
-    </ol>
 
-    <a href="./assets/hobbys.html">Hobbies</a> | <a href="./assets/contact.html">Contact info</a>
+    <div class="grid-container">
+        <div class="first card">
+            <h2><em>Summary</em></h2>
+        </div>
+        <div class="second card">
+            <h3>Objective:</h3>
+            <p>I aim to become a software engineer in a reputed organisation and also an entrepreneur.</p>
+        </div>
+        <div class="third card">
+            <h3>Education:</h3>
+            <p>B.Tech in Computer Science and Engineering from National Institute of Technology, Hamirpur (2024-2028)</p>
+        </div>
+        <div class="fourth card">
+            <h3>Skills:</h3>
+            <p>Programming Languages: C, C++, Python, JavaScript</p>
+            <p>Web Development: HTML, CSS, React.js, Node.js</p>
+        </div>
+        <div class="fifth card">
+            <h3>Projects:</h3>
+            <p>1. Personal Portfolio Website: A responsive website showcasing my projects and skills.</p>
+            <p>2. Additional projects completed during coursework using C, C++, and Python.</p>
+            <p>3. One of the projects was implementing BFS and DFS to solve a maze using Python</p>
+        </div>
+    </div>
+
+    <footer>
+        <a href="./assets/hobbys.html" class="btn">Hobbies</a> | <a href="./assets/contact.html" class="btn">Contact info</a> | <a href="https://github.com/ArghyaSharma" class="btn">GitHub Link</a>
+
+    </footer>
 
 </body>
 </html>
